Notifications full working; Bug fixes; Light theme added; Dark theme changed; Window refreshing added; FilterImportant removed; FilterCompleted added; Toggle theme switch design changed

--- a/PlanIt/PlanIt.UI/App.axaml
+++ b/PlanIt/PlanIt.UI/App.axaml
@@ -16,8 +16,8 @@
         <DataTemplate DataType="vm:FilterScheduledViewModel">
             <views:FilterScheduledView></views:FilterScheduledView>
         </DataTemplate>
-        <DataTemplate DataType="vm:FilterImportantViewModel">
-            <views:FilterImportantView></views:FilterImportantView>
+        <DataTemplate DataType="vm:FilterCompletedViewModel">
+            <views:FilterCompletedView></views:FilterCompletedView>
         </DataTemplate>
         <DataTemplate DataType="vm:FilterAllViewModel">
             <views:FilterAllView></views:FilterAllView>
