--- a/PlanIt/PlanIt.UI/Views/FilterAllView.axaml
+++ b/PlanIt/PlanIt.UI/Views/FilterAllView.axaml
@@ -19,7 +19,7 @@
                 <Grid ColumnDefinitions="*, Auto">
                     <TextBlock Classes="t-sb t-24" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="16 0 0 0" Text="All" Foreground="{DynamicResource TextAll}"></TextBlock>
                     <Button Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Height="30" Classes="panelBtn" Command="{Binding AddNewTask}">
-                        <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
+                        <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource BackgroundMain}"></PathIcon>
                         <Button.Styles>
                             <Style Selector="">
                                  <Setter Property="Background" Value="{DynamicResource TextAll}"></Setter>
